[package]
name = "marg"
version = "0.2.1"
edition = "2021"
authors = ["Vlad Krinitsyn <v.krinitsyn@gmail.com>"]
license = "MIT"
description = "Meta config for apps from args"
homepage = "https://github.com/vkrinitsyn/marg.git"
repository = "https://github.com/vkrinitsyn/marg.git"
#[dependencies]
#uuid = { version = "1.8.0", features = ["v4"] }

[features]
# at least one db feature is better to set
default = ["postgres"]
# default
postgres = []
#
sqlite = []

# pull password from az account
token = []

# check for key text file
rsa = []



